testdata/invalid/negative_shift_count.hzn
package probes

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    value := u32(1) << -1
    if value == 0 {
        return 0
    }
    return 0
}
